--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,5 @@ pip==20.0.2
 requests==2.22.0
 rtree==0.9.3
 shapely==1.7.0
-libspatialindex
-libspatialite
+libspatialindex==1.9.3
+libspatialite==4.3.0a
